Project grocery_server_db {
  database_type: 'SQLite'
  Note: 'This will store users, grocery lists and items'
}


Table users {
    id varchar [pk]
    group varchar [ref: > groups.id]
    username varchar
    email varchar
    joinTime timestamp
}

Table categories {
    categoryId varchar [pk]
    groupId varchar [ref: > groups.id, null]
    categoryName varchar
    Note {
        '''Category names don't need to be unique, only within a group
        This prevents other groups from deleting your custom categories'''
    }
}

Table groceryLists {
    id varchar [pk]
    groupId varchar [ref: > groups.id]
    creationTime timestamp
    madeBy varchar [ref: < users.id]
}

Table groceryListItems {
    listId varchar [ref: > groceryLists.id]
    itemId varchar [ref: > items.id]
    quantity int
}

Table items {
    id varchar [pk]
    itemName varchar
    categoryId varchar [ref: > categories.categoryId]
    creationTime timestamp
    lastUsed timestamp
}

Table groups {
    id varchar [pk]
    name varchar
    ownerId varchar [ref: - users.id]
    creationTime timestamp
}

Table invites {
    userId varchar [ref: > users.id]
    groupId varchar [ref: > groups.id]
    createdAt timestamp
    expirationTime timestamp
}

Table recipes {
    id varchar [pk]
    groupId varchar [ref: > groups.id]
    steps varchar
    mainPictureId varchar [ref: - recipePictures.id]
}

Table recipeItems {
    recipeId varchar [ref: > recipes.id]
    item_id varchar [ref: > items.id]
}

// Table recipeNotes {
//     recipeId varchar [ref: > recipes.id]
//     recipeNote varchar
//     userId varchar [ref: > users.id]
//     createdAt datetime
// }

Table recipePictures {
    id varchar [pk]
    recipeId varchar [ref: > recipes.id]
    filePath varchar
    takenAt datetime
}

Table profilePictures {
    userId varchar [ref: - users.id]
    filePath varchar
    takenAt datetime
}

Table requestListItems {
    groupId varchar [ref: > groups.id]
    itemId varchar [ref: > items.id]
    quantity int
}